--- a/views/data.tt
+++ b/views/data.tt
@@ -7,42 +7,13 @@
             </button>
         </form>
     </h1>
-[% ELSIF v %]
-    <h1>[% v.name | html_entity %]</h1>
-[% ELSE %]
-    <h1>All data</h1>
 [% END %]
     <div class="row">
         <div class="col-md-6">
             <div class="btn-toolbar" role="toolbar">
-                <div class="btn-group" role="group">
-                    <a href="?viewtype=table" class="btn btn-default">
-                        <i aria-hidden="true" class="fa fa-list fa-lg use-icon-font"></i>
-                        <img src="/images/icon-data-list.png" class="use-icon-png" style="display:none" alt="">
-                        <span class="visually-hidden">View as table</span>
-                    </a>
-
-                    <a href="?viewtype=graph" class="btn btn-default">
-                        <i aria-hidden="true" class="fa fa-area-chart fa-lg use-icon-font"></i>
-                        <img src="/images/icon-data-chart.png" class="use-icon-png" style="display:none" alt="">
-                        <span class="visually-hidden">View as graph</span>
-                    </a>
-
-                    <a href="?viewtype=timeline" class="btn btn-default">
-                        <i aria-hidden="true" class="fa fa-tasks fa-lg use-icon-font"></i>
-                        <img src="/images/icon-data-tasks.png" class="use-icon-png" style="display:none" alt="">
-                        <span class="visually-hidden">View on timeline</span>
-                    </a>
-
-                    <a href="?viewtype=calendar" class="btn btn-default">
-                        <i aria-hidden="true" class="fa fa-calendar fa-lg use-icon-font"></i>
-                        <img src="/images/icon-data-calendar.png" class="use-icon-png" style="display:none" alt="">
-                        <span class="visually-hidden">View on calendar</span>
-                    </a>
-                </div>
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_view">
-                            View <span class="caret"></span>
+                            Current view: [% IF v %][% v.name | html %][% ELSE %]All data[% END %] <span class="caret"></span>
                     </button>
                     <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu">
                         [% IF user.permission.view_create %]
@@ -86,28 +57,30 @@
                         [% END %]
                     </ul>
                 </div>
-                <div class="btn-group">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
-                            Action <span class="caret"></span>
-                    </button>
-                    <ul id="menu_action" class="dropdown-menu" role="menu">
-                        [% IF user_can_create %]
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/edit/">New record</a></li>
-                        [% END %]
-                        [% IF user.permission.link AND show_link %]
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/link/">New linked record</a></li>
-                        [% END %]
-                        [% IF user.permission.bulk_update %]
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/bulk/update/">Update all records in view...</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/bulk/clone/">Clone all records in view...</a></li>
-                        [% END %]
-                        [% IF user.permission.delete %]
-                            <li role="presentation"><a role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_delete" style="cursor: pointer">Delete all records in view...</a>
-                        [% END %]
-                        [% IF viewtype == "table" AND records.size AND user.permission.download %]
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/data?download">Download all records in view</a></li>
-                        [% END %]
-                    </ul>
+                <div class="btn-group" role="group">
+                    <a href="?viewtype=table" class="btn btn-default">
+                        <i aria-hidden="true" class="fa fa-list fa-lg use-icon-font"></i>
+                        <img src="/images/icon-data-list.png" class="use-icon-png" style="display:none" alt="">
+                        <span class="visually-hidden">View as table</span>
+                    </a>
+
+                    <a href="?viewtype=graph" class="btn btn-default">
+                        <i aria-hidden="true" class="fa fa-area-chart fa-lg use-icon-font"></i>
+                        <img src="/images/icon-data-chart.png" class="use-icon-png" style="display:none" alt="">
+                        <span class="visually-hidden">View as graph</span>
+                    </a>
+
+                    <a href="?viewtype=timeline" class="btn btn-default">
+                        <i aria-hidden="true" class="fa fa-tasks fa-lg use-icon-font"></i>
+                        <img src="/images/icon-data-tasks.png" class="use-icon-png" style="display:none" alt="">
+                        <span class="visually-hidden">View on timeline</span>
+                    </a>
+
+                    <a href="?viewtype=calendar" class="btn btn-default">
+                        <i aria-hidden="true" class="fa fa-calendar fa-lg use-icon-font"></i>
+                        <img src="/images/icon-data-calendar.png" class="use-icon-png" style="display:none" alt="">
+                        <span class="visually-hidden">View on calendar</span>
+                    </a>
                 </div>
                 [% PROCESS search_form.tt %]
                 [% IF viewtype == "timeline" %]
@@ -118,13 +91,10 @@
             </div>
         </div>
         [% IF viewtype == "table" %]
-            <div class="col-md-6">
-                <form method="get" class="form-horizontal">
+            <div class="pull-right">
+                <form method="get" class="form-inline">
                     <div class="form-group">
-                        <div class="col-sm-4">
                             <label for="rows_per_page" class="control-label">Rows per page</label>
-                        </div>
-                        <div class="col-sm-8">
                             <select id="rows_per_page" class="form-control" name="rows" onchange="this.form.submit()" role="listbox">
                                 <option value="10" [% IF subset.rows == 10 %]selected[% END %]>10</option>
                                 <option value="25" [% IF subset.rows == 25 %]selected[% END %]>25</option>
@@ -132,7 +102,6 @@
                                 <option value="100" [% IF subset.rows == 100 %]selected[% END %]>100</option>
                                 <option value="200" [% IF subset.rows == 200 %]selected[% END %]>200</option>
                             </select>
-                        </div>
                     </div>
                 </form>
             </div>
