--- a/views/user.tt
+++ b/views/user.tt
@@ -5,9 +5,9 @@
 [% IF edituser.account_request %]
     <h2>New account request</h2>
 [% ELSIF edituser.id %]
-    <h2>User - [% edituser.value | html_entity %]</h2>
+    <h2>Edit [% edituser.value | html_entity %]</h2>
 [% ELSE %]
-    <h2>New user</h2>
+    <h2>Add a user</h2>
 [% END %]
 <form method="post" style="display: inline"> <!-- Prevent reset password button line break -->
     <div class="row">
@@ -53,7 +53,7 @@
                     <label for="title">
                         Title:
                         [% IF page == "user" %]
-                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#submitnewtitle">add title</button>
+                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#submitnewtitle">Add title</button>
                         [% END %]
                     </label>
                     <select class="form-control" id="title" name="title">
@@ -71,7 +71,7 @@
                     <label for="organisation">
                         [% site.register_organisation_name %]:
                         [% IF page == "user" %]
-                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#submitneworganisation">add organisation</button>
+                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#submitneworganisation">Add organisation</button>
                         [% END %]
                     </label>
                     <select class="form-control" id="organisation" name="organisation">
@@ -89,7 +89,7 @@
             [% IF page == "user" %]
                 <div class="form-group">
                     <label for="view_limits">
-                        Limit user's data to only records in any of: (<a href="" data-toggle="modal" data-target="#modalhelp_limitdata">?</a>)
+                        Only allow this user to see records in these tables: (<a href="" data-toggle="modal" data-target="#modalhelp_limitdata">?</a>)
                     </label>
                     [% FOREACH view_limit IN edituser.view_limits_with_blank %]
                         <div class="limit-to-view">
@@ -117,8 +117,9 @@
             [% END %]
             [% IF page == "user" %]
                 <label>
-                    Permissions:
+                    User's system-wide permissions:
                 </label>
+                <p>This user can</p>
                 [% FOREACH permission IN permissions %]
                     [% key = permission.name %]
                     <div class="checkbox">
@@ -129,7 +130,7 @@
                     </div>
                 [% END %]
                 <label>
-                    Groups:
+                    Add this to the following groups:
                 </label>
                 [% IF groups.size %]
                     [% FOREACH group IN groups %]
@@ -147,10 +148,10 @@
                     </p>
                 [% END %]
             [% END %]
-            <button type="submit" name="submit" value="submit" class="btn btn-primary">[% IF edituser.id %]Save[% ELSE %]Save[% END %]</button>
+            <button type="submit" name="submit" value="submit" class="btn btn-primary">[% IF edituser.account_request %]Approve request[% ELSE %]Save[% END %]</button>
             [% IF page == "user" AND edituser.id %]
                 [% IF edituser.account_request %]
-                    <button type="submit" name="delete" value="[% edituser.id %]" class="btn btn-default">Reject</button>
+                    <button type="submit" name="delete" value="[% edituser.id %]" class="btn btn-default">Reject request</button>
                 [% ELSE %]
                     <button type="submit" name="delete" value="[% edituser.id %]" class="btn btn-default">Delete</button>
                 [% END %]
@@ -235,9 +236,7 @@
 </form>
 [% ELSE %]
 <p>
-    <a href="/user/0" class="btn btn-default" role="button">Create user</a>
-    <a href="" data-toggle="modal" data-target="#modal-email" class="btn btn-default" role="button">Email users</a>
-    <a href="/user?download" class="btn btn-default" role="button">Download</a>
+    <a href="/user/0" class="btn btn-default" role="button">Add a user</a>
 </p>
 [% IF register_requests.size %]
     <h4>Active accounts</h4>
