--- a/views/config.tt
+++ b/views/config.tt
@@ -1,32 +1,14 @@
-<h2>General configuration</h2>
+<h2>Manage [% instance.name | html %] homepage</h2>
 <div class="row">
     <div class="col-md-12">
         <form role="form" method="post">
-            <label for="sort_layout_id">Default sort:</label>
-            <div class="row">
-                <div class="col-md-6">
-                    <select class="form-control" id="sort_layout_id" name="sort_layout_id">
-                        <option value="">ID</option>
-                        [% FOREACH column IN all_columns %]
-                            <option value="[% column.id %]" [% IF instance.sort_layout_id == column.id %]selected[% END %]>[% column.name %]</option>
-                        [% END %]
-                    </select>
-                </div>
-                <div class="col-md-6">
-                    <select class="form-control" id="sort_type" name="sort_type">
-                        <option value="asc" [% IF instance.sort_type == "asc" %]selected[% END %]>Ascending</option>
-                        <option value="desc" [% IF instance.sort_type == "desc" %]selected[% END %]>Descending</option>
-                    </select>
-                </div>
-            </div>
-            <p></p>
-            <label for="sort_layout_id">Manage uploaded files:</label>
+            <p class="lead">
+                Customise the homepage your users see when they login. Each table has its own
+                homepage. You can use the homepage to give instructions, set out guidelines or create
+                quick links to relevant views or actions.
+            </p>
             <div class="form-group">
-                <p><a href="/file">Click here to manage files that have been uploaded separately from records</a></p>
-            </div>
-            <p></p>
-            <div class="form-group">
-                <label for="homepage_text">Homepage message:</label>
+                <label for="homepage_text">Left-hand (top) content block:</label>
                 [% IF 0 # Add config later for TinyMCE %]
                     <textarea class="form-control" id="homepage_text" name="homepage_text">[% instance.homepage_text | html_entity %]</textarea>
                 [% ELSE %]
@@ -35,7 +17,7 @@
                 [% END %]
             </div>
             <div class="form-group">
-                <label for="homepage_text2">Homepage message (optional additional column):</label>
+                <label for="homepage_text2">Right-hand (bottom) content block:</label>
                 [% IF 0 %]
                     <textarea class="form-control" id="homepage_text2" name="homepage_text2">[% instance.homepage_text2 | html_entity %]</textarea>
                 [% ELSE %]
