--- a/views/import/data.tt
+++ b/views/import/data.tt
@@ -1,11 +1,14 @@
-<h2>Import Data</h2>
-<p>Use this page to upload a CSV file containing data for the currently selected table. The first row of the file must contain the field names, exactly matching those of the layout.</p>
+<h2>Import records</h2>
+<p>
+    You can upload records as a CSV file. The first row of your CSV file must
+    contain the identical field names to those in your table.
+</p>
 
 <div class="row">
     <div class="col-md-6">
         <form  role="form" method="post" enctype="multipart/form-data">
             <div class="form-group">
-                <label for="file">CSV File:</label>
+                <label for="file">CSV file:</label>
                 <input type="file" id="file" name="file">
             </div>
             <div class="form-group">
