--- a/views/metric.tt
+++ b/views/metric.tt
@@ -1,5 +1,5 @@
-<h2>Metrics</h2>
 [% IF metricgroup.defined %]
+<h2>[% IF metricgroup.id %]Edit metric[% ELSE %]Add new metric[% END %]</h2>
 <form role="form" method="post">
     <div class="row">
         <div class="col-md-6">
@@ -88,6 +88,7 @@
 </form>
 <p></p>
 [% ELSE %]
+    <h2>Manage metrics</h2>
     <p>Use this page to create, delete and edit metrics. Metrics are used to measure
     values on graphs against defined values. When a graph is configured to use a metric,
     the standard absolute values on the graphs will be replaced by percentage values,
