--- a/views/data.tt
+++ b/views/data.tt
@@ -16,20 +16,6 @@
                             Current view: [% IF v %][% v.name | html %][% ELSE %]All data[% END %] <span class="caret"></span>
                     </button>
                     <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu">
-                        [% IF user.permission.view_create %]
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0">Create new view</a></li>
-                        [% END %]
-                        [% IF v %]
-                            [% IF user.permission.view_create %]
-                                [% IF !v.global OR user.permission.layout %]
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/[% v.id %]">Edit this view</a></li>
-                                [% END %]
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0?clone=[% v.id %]">Clone this view</a></li>
-                            [% END %]
-                            <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Alert me</a></li>
-                        [% END %]
-                        <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_rewind">Historic view...</a></li>
-                        <li role="presentation" class="divider"></li>
                         [% first = 1 %]
                         [% FOREACH ve IN user_views %]
                             [% IF first AND NOT ve.global AND not ve.is_admin %]
@@ -38,7 +24,7 @@
                                 [% UNLESS first %]
                                     <li role="presentation" class="divider"></li>
                                 [% END %]
-                                <li role="presentation" class="dropdown-header">Global views</li>
+                                <li role="presentation" class="dropdown-header">Shared views</li>
                             [% ELSIF (first AND ve.is_admin) OR (lastv AND ve.is_admin != lastv.is_admin) %]
                                 [% UNLESS first %]
                                     <li role="presentation" class="divider"></li>
