--- a/views/view.tt
+++ b/views/view.tt
@@ -1,5 +1,5 @@
 <h2>
-    [% IF v.id %]
+    [% IF view_edit.id %]
         Edit current view
     [% ELSIF clone %]
         Edit the copy of this view
@@ -12,17 +12,17 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="name">View name:</label>
-                <input type="text" class="form-control" id="name" name="name" value="[% v.name | html_entity %]">
+                <input type="text" class="form-control" id="name" name="name" value="[% view_edit.name | html_entity %]">
             </div>
             [% IF user.permission.layout %]
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" name="global" [% IF v.global %]checked[% END %]>Shared view
+                        <input type="checkbox" name="global" [% IF view_edit.global %]checked[% END %]>Shared view
                     </label>
                 </div>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" name="is_admin" [% IF v.is_admin %]checked[% END %]>Administration view (only visible to table administrators)
+                        <input type="checkbox" name="is_admin" [% IF view_edit.is_admin %]checked[% END %]>Administration view (only visible to table administrators)
                     </label>
                 </div>
             [% END %]
@@ -34,7 +34,7 @@
                         <td>
                             <input class="col_check" type="checkbox" name="column" value="[% column.id %]"
                                 [% id = column.id %]
-                                [% IF v.columns.grep("^$id\$").size %]checked[% END %]
+                                [% IF view_edit.columns.grep("^$id\$").size %]checked[% END %]
                             >
                         </td>
                         <td>[% column.name | html_entity %]</td>
@@ -68,10 +68,10 @@
 
             <label>Filters:</label>
             <div id="builder"></div>
-            <input id="filter" type="hidden" name="filter" value="[% v.filter | html_entity %]">
+            <input id="filter" type="hidden" name="filter" value="[% view_edit.filter | html_entity %]">
             <label for="sorts">Sort the records in your view by:</label>
             <div id="sorts">
-                [% FOREACH sort IN v.sorts %]
+                [% FOREACH sort IN view_edit.sorts %]
                     [% PROCESS sortrow %]
                 [% END %]
                 <div class="sort-add">
@@ -92,7 +92,7 @@
                 Save
             </button>
             <a href="/data" class="btn btn-default">Cancel</a>
-            [% IF v.id AND NOT clone %]
+            [% IF view_edit.id AND NOT clone %]
                 <a href="" class="btn btn-default" data-toggle="modal" data-target="#myModal">Delete</a>
             [% END %]
         </div>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="modal-body">
                         <p>Are you sure you want to delete this view?</p>
-                        [% IF v.alert %]
+                        [% IF view_edit.alert %]
                             <p>Please note that you will no longer receive the alerts that
                             are configured for this view.</p>
                         [% END %]
@@ -142,9 +142,9 @@
                 ' );
             });
         }); 
-        [% INCLUDE builder.tt filter_normal = v.filter filter_base64 = v.filter.base64 %]
-        [% IF v.filter.as_json AND NOT v.filter.as_json.match('^[{}\s]*$') %]
-            var data = decodeBase64('[% v.filter.base64 %]');
+        [% INCLUDE builder.tt filter_normal = view_edit.filter filter_base64 = view_edit.filter.base64 %]
+        [% IF view_edit.filter.as_json AND NOT view_edit.filter.as_json.match('^[{}\s]*$') %]
+            var data = decodeBase64('[% view_edit.filter.base64 %]');
             $('#builder').queryBuilder('setRules',
                 JSON.parse(data)
             );
