--- a/views/builder.tt
+++ b/views/builder.tt
@@ -80,6 +80,7 @@ $('#builder[% builder_id %]').queryBuilder({
             {type: 'greater_or_equal', accept_values: true,  apply_to: ['string', 'number', 'datetime']},
             {type: 'contains',         accept_values: true,  apply_to: ['datetime']},
             {type: 'begins_with',      accept_values: true,  apply_to: ['string']},
+            {type: 'not_begins_with',  accept_values: true,  apply_to: ['string']},
             {type: 'is_empty',         accept_values: false, apply_to: ['string', 'number', 'datetime']},
             {type: 'is_not_empty',     accept_values: false, apply_to: ['string', 'number', 'datetime']}
         ]
